kubernetes/kserve/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: intellirag
  labels:
    name: intellirag
    istio-injection: enabled
